--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.1.0",
     "mongose": "^0.0.2-security",
     "node": "^19.8.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "parser": "^0.1.4",
     "react": "^18.2.0",
