--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "axios": "^1.4.0",
     "body": "^5.1.0",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
     "mdb-ui-kit": "^6.2.0",
     "mongodb": "^5.6.0",
@@ -32,6 +34,9 @@
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "parser": "^0.1.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
