--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon express.js",
     "dev": "vite",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -17,15 +19,19 @@
     "@mui/material": "^5.14.0",
     "@popperjs/core": "^2.11.6",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "body": "^5.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "framer-motion": "^10.12.4",
+    "jsonwebtoken": "^9.0.1",
     "mdb-ui-kit": "^6.2.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.1.0",
@@ -40,8 +46,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "router": "^1.3.7"
+    "react-router-dom": "6.14",
+    "router": "^1.3.7",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
