--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-    "start": "nodem express.js",
+    "start": "node express.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
